--- a/android-developer.html
+++ b/android-developer.html
@@ -83,7 +83,7 @@ Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endava.referrals.selectminds.com/jobs/android-developer-5135'>Android Developer - Endava Careers</a></h5> 
+<h5><a href='https://endava.referrals.selectminds.com/jobs/android-developer-5135'>Android Developer - Endava Careers</a></h5> 
 <p><span class="badge badge-light">Buenos Aires Buenos Aires, Argentina</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -120,7 +120,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/quantummetric/1f8abd0f-8902-45f5-9b77-b85aaeb5caba'>Quantum Metric - Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quantummetric/1f8abd0f-8902-45f5-9b77-b85aaeb5caba'>Quantum Metric - Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -160,7 +160,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.applythis.net/job/?a=021808F20.0'>
+<h5><a href='https://www.applythis.net/job/?a=021808F20.0'>
 	
     Apply for Lead Android Developer -  Woking, United Kingdom - IT and Internet - SS003 - Find a job, build a career
 
@@ -176,7 +176,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://bourneleisure.csod.com/ux/ats/careersite/1/home/requisition/9276?c=bourneleisure'>Junior Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bourneleisure.csod.com/ux/ats/careersite/1/home/requisition/9276?c=bourneleisure'>Junior Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 10, 2019 ... Junior Android Developer We are looking for a hands-on Android App Developer 
 with a passion for creating innovative digital experiences, to help us launch the?...</p>
@@ -202,7 +202,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://cellular.join.com/jobs/447268-android-developer-m-w-d'>Job @ CELLULAR (Wien): Android Developer (m/w/d) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cellular.join.com/jobs/447268-android-developer-m-w-d'>Job @ CELLULAR (Wien): Android Developer (m/w/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -282,7 +282,7 @@ participating in driving our already successful banking service to new heights.<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://asg.applytojob.com/apply/dbSkZEdD9J/Jr-Android-Application-Developer'>Jr. Android Application Developer - Advanced Systems Group - Career Page</a></h5> 
+<h5><a href='http://asg.applytojob.com/apply/dbSkZEdD9J/Jr-Android-Application-Developer'>Jr. Android Application Developer - Advanced Systems Group - Career Page</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA  Mountain View San Francisco</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -327,7 +327,7 @@ Android Developer (f/m/d) at diconium in Berlin | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://www.42jobs.io/android/jobs/8325-experienced-android-application-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/android/jobs/8325-experienced-android-application-developer'>
 Experienced Android Application Developer at Yor Labs Inc in Portland | Android jobs | 42jobs.io
 
 </a></h5> 
@@ -341,7 +341,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Amsterdam Amsterdam, Netherlands</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/algorythma/jobs/1914834'>Job Application for Android Developer (eCommerce Platform) at Algorythma</a></h5> 
+<h5><a href='https://boards.greenhouse.io/algorythma/jobs/1914834'>Job Application for Android Developer (eCommerce Platform) at Algorythma</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -402,7 +402,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DalitsoConsulting/743999692011066-hiring-android-developer'>Dalitso Consulting Hiring: Android Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DalitsoConsulting/743999692011066-hiring-android-developer'>Dalitso Consulting Hiring: Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">South Africa</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
