--- a/software.html
+++ b/software.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/github/jobs/1901116'>Job Application for Senior Software Engineer - Dependabot at GitHub</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4497550002'>Job Application for Junior Software Engineer at KeepTruckin</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
@@ -231,7 +235,7 @@
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999698320052-software-engineer-member-experience-node-js-react-'>K4Connect Software Engineer - Member Experience (Node.js, React) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999698320052-software-engineer-member-experience-node-js-react-'>K4Connect Software Engineer - Member Experience (Node.js, React) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -289,7 +293,7 @@
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opRpbfwA&__jvst=Employee+Referral&__jvsd=sEPvYgwH&__jvsc=Twitter&bid=nfgfmMwn'>ServiceNow Careers - Senior/Staff Java Software Engineer - Full Stack</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opRpbfwA&__jvst=Employee+Referral&__jvsd=sEPvYgwH&__jvsc=Twitter&bid=nfgfmMwn'>ServiceNow Careers - Senior/Staff Java Software Engineer - Full Stack</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois  Chicago, IL</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -400,7 +404,7 @@ privacy issues and laws. Strong interpersonal and collaboration skills.</p>
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698276560-senior-software-engineer'>Verisk Senior Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698276560-senior-software-engineer'>Verisk Senior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Halifax, NSCanada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -447,12 +451,6 @@ privacy issues and laws. Strong interpersonal and collaboration skills.</p>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSZ9VfwF&k=Job&j=orOq9fwy&__jvst=Employee+Referral&__jvsd=sSinlfwC&__jvsc=Twitter&bid=noMMlMwy'>Praxis Engineering Careers - Software Engineer  - Clearance Required</a></h5> 
 <p><span class="badge badge-light">Annapolis Junction, Maryland</span></p>
 <p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://thomsonreuters.wd5.myworkdayjobs.com/External_Career_Site/job/USA-Carrollton-2395-Midway-Rd/Software-Engineer--Technology_JREQ131601?source=Applicant_Source_Thomson_Reuters_Career_Center'>Software Engineer, Technology</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 18, 2019 ... ... the decisions that matter most, all powered by the world's most trusted news 
-organization. Sr. Analyst, Incident Management | USA-Carrollton-2395 Midway 
-Rd.</p>
 <hr/>
 
 
