--- a/project-manager.html
+++ b/project-manager.html
@@ -100,7 +100,7 @@
 <p><span class="badge badge-light">Sunnyvale, CA Sunnyvale</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698331113-senior-program-manager-square-ecommerce'>Square Senior Program Manager, Square eCommerce | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999698331113-senior-program-manager-square-ecommerce'>Square Senior Program Manager, Square eCommerce | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA  United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -158,7 +158,7 @@
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999698321278-field-project-manager'>K4Connect Field Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999698321278-field-project-manager'>K4Connect Field Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -166,7 +166,7 @@
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4494190002'>Job Application for Associate Project Manager at Wayfair</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4494190002'>Job Application for Associate Project Manager at Wayfair</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -174,7 +174,7 @@
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nasuni/job/owLpbfwB'> Nasuni Careers - Principal Technical Program Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nasuni/job/owLpbfwB'> Nasuni Careers - Principal Technical Program Manager</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -256,7 +256,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">Sunnyvale United States</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://teampsc.applicantpro.com/jobs/1215201.html'>Civil Engineer - Project Manager - Aviation (Any Established PSC Location) - TX - Parkhill, Smith, &amp; Cooper, Inc. Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://teampsc.applicantpro.com/jobs/1215201.html'>Civil Engineer - Project Manager - Aviation (Any Established PSC Location) - TX - Parkhill, Smith, &amp; Cooper, Inc. Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -304,7 +304,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hologic.referrals.selectminds.com/jobs/field-installation-project-manager-ga-al-ms-tn-3027'>Field Installation Project Manager - GA, AL, MS, TN - Hologic Careers</a></h5> 
+<h5><a href='https://hologic.referrals.selectminds.com/jobs/field-installation-project-manager-ga-al-ms-tn-3027'>Field Installation Project Manager - GA, AL, MS, TN - Hologic Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -320,7 +320,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://burnsmcdonn.referrals.selectminds.com/jobs/remediation-project-manager-6789'>Remediation Project Manager - Burns & McDonnell Careers</a></h5> 
+<h5><a href='https://burnsmcdonn.referrals.selectminds.com/jobs/remediation-project-manager-6789'>Remediation Project Manager - Burns & McDonnell Careers</a></h5> 
 <p><span class="badge badge-light">Los Angeles, California United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -354,15 +354,15 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/teamviewer-global/job/oCwpbfws'>TeamViewer Global Careers - Senior Project Manager (m/f/d)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/teamviewer-global/job/oCwpbfws'>TeamViewer Global Careers - Senior Project Manager (m/f/d)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Veeam2/743999698266795-marketing-communications-project-manager'>Veeam Marketing Communications - Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Veeam2/743999698266795-marketing-communications-project-manager'>Veeam Marketing Communications - Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698267088-epv-sub-project-manager-software-spjm-sw-'>Bosch Group EPV - Sub-Project Manager Software (SPjM SW) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698267088-epv-sub-project-manager-software-spjm-sw-'>Bosch Group EPV - Sub-Project Manager Software (SPjM SW) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -370,7 +370,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/indigo/jobs/1931884'>Job Application for Project Manager, DevOps at Indigo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/indigo/jobs/1931884'>Job Application for Project Manager, DevOps at Indigo</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
